Security fix: Remove hardcoded API keys and secrets
- Replaced hardcoded Alchemy RPC URLs with public Ankr endpoints
- Removed exposed Telegram bot token from example.env
- Updated frontend config to use environment variables with fallbacks
- Added frontend/.env.example for Vercel deployment
- All sensitive data now loaded from .env (gitignored)

--- a/example.env
+++ b/example.env
@@ -31,10 +31,14 @@ REACTIVE_CONTRACT=
 # Set to false for production (no mocks)
 USE_MOCK_ORIGIN=false
 
-# Telegram Bot Configuration
-TELEGRAM_BOT_TOKEN=8555496949:AAGd5NGSKd5GNF7Iz25XskA7BZEB6fyUToc
-TELEGRAM_CHAT_ID=1187633801
+# Telegram Bot Configuration (get from @BotFather)
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+TELEGRAM_CHAT_ID=your_telegram_chat_id_here
 
-# V2 Contract Addresses (Production)
-RSC_V2_ADDRESS=0x2D12283203b8d27757BF76B5416A0818b168e853
-DEST_V2_ADDRESS=0x3DE1a4A19f879595503ADFbf6885E5b0B2545Fb2
+# V2 Contract Addresses (fill after deployment)
+RSC_V2_ADDRESS=
+DEST_V2_ADDRESS=
+
+# Multi-Feed V2 Contract Addresses (Production)
+MULTI_FEED_DEST_ADDRESS=0x889c32f46E273fBd0d5B1806F3f1286010cD73B3
+MULTI_FEED_RSC_ADDRESS=0x70c6c95D4F75eE019Fa2c163519263a11AaC70f5
